--- a/langchain/01-OpenAI接入langchain.ipynb
+++ b/langchain/01-OpenAI接入langchain.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='中国的首都是北京。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 7, 'prompt_tokens': 16, 'total_tokens': 23, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-55394ca9-4025-4f21-b093-1cc75709f3d1-0', usage_metadata={'input_tokens': 16, 'output_tokens': 7, 'total_tokens': 23, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content='中国的首都是北京。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 7, 'prompt_tokens': 16, 'total_tokens': 23, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-63b2cd27-8e9e-488e-992f-2a1bb5231f6d-0', usage_metadata={'input_tokens': 16, 'output_tokens': 7, 'total_tokens': 23, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,16 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'标题：胖东来烤鸭，让味蕾沉醉的美味\\n\\n在繁华的城市中，有一家让人回味无穷的烤鸭店——胖东来烤鸭。这家店虽然不起眼，但却是许多美食爱好者心中的美味天堂。\\n\\n走进胖东来烤鸭，首先映入眼帘的是烤鸭的诱人香气，让人垂涎欲滴。烤鸭皮金黄酥脆，肉质鲜嫩多汁，每一口都让人感受到满满的幸福。配上店家特制的鸭饼和葱丝，简直是绝配，让人欲罢不能。\\n\\n除了烤鸭，胖东来烤鸭还有许多其他美味的小吃，比如鸭血粉丝、鸭肠火锅等，每一道菜都让人惊艳。店内环境干净整洁，服务员热情周到，让人感受到家的温暖。\\n\\n每次来到胖东来烤鸭，都能让人的味蕾沉醉在美味之中，让人流连忘返。如果你也是美食爱好者，一定要来胖东来烤鸭品尝一番，相信你会爱上这里的美味，爱上这里的服务，爱上这里的一切。让我们一起来享受美食带来的幸福吧！'"
+       "'标题：胖东来烤鸭，让味蕾沉醉的美味\\n\\n在繁华的都市中，有一家让人回味无穷的烤鸭店——胖东来烤鸭。这家店位于市中心，每天都吸引着无数食客前来品尝他们独特的烤鸭。\\n\\n走进店内，一股浓浓的烤鸭香味扑面而来，让人垂涎欲滴。烤鸭师傅们正在烤制鸭子，火候恰到好处，皮脆肉嫩，色泽金黄诱人。每一只烤鸭都经过精心处理，保证了口感的鲜美。\\n\\n品尝胖东来烤鸭，首先让人感受到的是鸭皮的香脆和肉质的鲜嫩，入口即化。配上店家特制的酱料和蔬菜，更是美味无比。不仅如此，店内还提供各种配菜和小吃，让人吃得过瘾。\\n\\n除了烤鸭，胖东来还有各种口味的炒饭、炒面等美食，满足了不同人的口味需求。无论是单人用餐还是家庭聚餐，这里都是一个不错的选择。\\n\\n胖东来烤鸭，让人们在繁忙的生活中找到了一处放松的天堂。每一次品尝都是一次美味的享受，让人的味蕾沉醉其中。如果你还没有来过胖东来，赶紧来一趟吧，让你的味蕾也沉醉在这份美味之中吧！'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "ChatPromptValue(messages=[HumanMessage(content='请根据下面的主题，帮我生成一篇小红书营销短文: 康师傅绿茶', additional_kwargs={}, response_metadata={})])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='标题：发现健康生活的新方式，康师傅绿茶带你一起走进清爽世界\\n\\n大家好，我是小红书的小编，今天我要和大家分享的是康师傅绿茶，一款清爽健康的饮品，让你在忙碌的生活中也能享受一丝清爽。\\n\\n康师傅绿茶选用优质绿茶叶精心制作而成，口感清爽，回味无穷。每一口都能感受到绿茶的清香和滋味，让人仿佛置身于清爽的绿色世界中。而且康师傅绿茶不含添加剂，健康又安心。\\n\\n在这个快节奏的生活中，我们常常忽略了身体的健康。康师傅绿茶提倡健康生活方式，让你在享受美味的同时也能注重身体健康。无论是工作中的疲惫还是生活中的压力，一瓶康师傅绿茶就能让你感受到清爽和舒适。\\n\\n康师傅绿茶，不仅是一款饮品，更是一种生活方式。让我们一起走进清爽的世界，发现健康生活的新方式。让康师傅绿茶成为你生活中的一部分，带给你清爽和健康。\\n\\n快来试试康师傅绿茶，让清爽成为你生活的一部分吧！愿我们每个人都能享受健康生活，活出自己的精彩！', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 520, 'prompt_tokens': 47, 'total_tokens': 567, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-39555d5b-d44f-46b4-a20d-327d6e45988b-0', usage_metadata={'input_tokens': 47, 'output_tokens': 520, 'total_tokens': 567, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+       "AIMessage(content='标题：探寻康师傅绿茶的美味之道\\n\\n大家好，今天我想和大家分享的是我最近发现的一款超级好喝的饮品——康师傅绿茶。作为一个绿茶爱好者，我一直在寻找一款口感清爽、回甘适中的绿茶，而康师傅绿茶完美地符合了我的要求。\\n\\n首先，康师傅绿茶选用的是优质绿茶叶，经过精心炒制而成，保留了绿茶的原汁原味，清香怡人。喝下去，一股清爽的茶香扑面而来，仿佛置身于茶园之中，让人心情愉悦。\\n\\n其次，康师傅绿茶口感醇厚，入口滑润，回甘十足。喝完一口，满口生津，仿佛舌尖上跳动着清泉，让人回味无穷。而且，康师傅绿茶不添加防腐剂和人工色素，健康又放心。\\n\\n最重要的是，康师傅绿茶不仅口感好，包装设计也非常时尚。瓶身简约大方，绿色的包装让人一眼就能认出，是一款高颜值的饮品。无论是携带出门还是在家享用，都能为生活增添一份美好。\\n\\n总的来说，康师傅绿茶是一款值得推荐的好饮品，清香回甘，口感醇厚，健康放心。无论是工作间隙还是休闲时光，都可以随时随地享用，让生活更加美好。快来试试康师傅绿茶，探寻它的美味之道吧！#康师傅绿茶# #清爽回甘# #健康生活#', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 612, 'prompt_tokens': 47, 'total_tokens': 659, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-d86556c4-a661-4523-8cf4-c277ab757907-0', usage_metadata={'input_tokens': 47, 'output_tokens': 612, 'total_tokens': 659, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
      "execution_count": 5,
@@ -158,7 +158,7 @@
     {
      "data": {
       "text/plain": [
-       "'标题：发现健康生活的新方式，康师傅绿茶带你一起走进清爽世界\\n\\n大家好，我是小红书的小编，今天我要和大家分享的是康师傅绿茶，一款清爽健康的饮品，让你在忙碌的生活中也能享受一丝清爽。\\n\\n康师傅绿茶选用优质绿茶叶精心制作而成，口感清爽，回味无穷。每一口都能感受到绿茶的清香和滋味，让人仿佛置身于清爽的绿色世界中。而且康师傅绿茶不含添加剂，健康又安心。\\n\\n在这个快节奏的生活中，我们常常忽略了身体的健康。康师傅绿茶提倡健康生活方式，让你在享受美味的同时也能注重身体健康。无论是工作中的疲惫还是生活中的压力，一瓶康师傅绿茶就能让你感受到清爽和舒适。\\n\\n康师傅绿茶，不仅是一款饮品，更是一种生活方式。让我们一起走进清爽的世界，发现健康生活的新方式。让康师傅绿茶成为你生活中的一部分，带给你清爽和健康。\\n\\n快来试试康师傅绿茶，让清爽成为你生活的一部分吧！愿我们每个人都能享受健康生活，活出自己的精彩！'"
+       "'标题：探寻康师傅绿茶的美味之道\\n\\n大家好，今天我想和大家分享的是我最近发现的一款超级好喝的饮品——康师傅绿茶。作为一个绿茶爱好者，我一直在寻找一款口感清爽、回甘适中的绿茶，而康师傅绿茶完美地符合了我的要求。\\n\\n首先，康师傅绿茶选用的是优质绿茶叶，经过精心炒制而成，保留了绿茶的原汁原味，清香怡人。喝下去，一股清爽的茶香扑面而来，仿佛置身于茶园之中，让人心情愉悦。\\n\\n其次，康师傅绿茶口感醇厚，入口滑润，回甘十足。喝完一口，满口生津，仿佛舌尖上跳动着清泉，让人回味无穷。而且，康师傅绿茶不添加防腐剂和人工色素，健康又放心。\\n\\n最重要的是，康师傅绿茶不仅口感好，包装设计也非常时尚。瓶身简约大方，绿色的包装让人一眼就能认出，是一款高颜值的饮品。无论是携带出门还是在家享用，都能为生活增添一份美好。\\n\\n总的来说，康师傅绿茶是一款值得推荐的好饮品，清香回甘，口感醇厚，健康放心。无论是工作间隙还是休闲时光，都可以随时随地享用，让生活更加美好。快来试试康师傅绿茶，探寻它的美味之道吧！#康师傅绿茶# #清爽回甘# #健康生活#'"
       ]
      },
      "execution_count": 6,
@@ -189,17 +189,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "标题：探寻康师傅绿茶的魅力\n",
+      "标题：探寻康师傅绿茶的清新之味\n",
       "\n",
-      "大家好，今天我想和大家分享一下我对康师傅绿茶的独特看法。作为一款备受欢迎的饮品，康师傅绿茶不仅口感清爽，而且还有着让人难以抗拒的魅力。\n",
+      "大家好，今天我要和大家分享的是康师傅绿茶，一款清新怡人的饮品。康师傅绿茶选用优质绿茶叶，经过精心炒制而成，保留了绿茶的原汁原味，让人一口喝下去就仿佛置身于清新的茶园中。\n",
       "\n",
-      "首先，康师傅绿茶选用的茶叶品质上乘，口感清新自然，让人一口接一口欲罢不能。而且，康师傅绿茶采用的是独特的制茶工艺，保留了茶叶的原汁原味，让人在品尝的过程中仿佛置身于茶园之中。\n",
+      "康师傅绿茶不仅口感清爽，而且富含丰富的维生素和矿物质，对身体健康有益。无论是在炎炎夏日还是在寒冷冬季，一瓶康师傅绿茶都能为你带来清凉和舒适。\n",
       "\n",
-      "其次，康师傅绿茶不仅口感上佳，而且还有着丰富的营养成分。茶叶中含有丰富的维生素和矿物质，对身体健康有着极大的益处。每一口康师傅绿茶都是对身体的呵护，让人在享受美味的同时也能获得健康。\n",
+      "除了口感和营养价值，康师傅绿茶还有着独特的包装设计，简约大方，让人一眼就能被吸引。无论是在办公室、户外运动还是在家休闲，都能随时享受到康师傅绿茶带来的清新之味。\n",
       "\n",
-      "最后，康师傅绿茶的包装设计简约大方，绿色的包装让人一眼就能联想到清新的茶香。无论是携带出门还是放在家中，康师傅绿茶都是一款让人爱不释手的饮品。\n",
-      "\n",
-      "总的来说，康师傅绿茶不仅是一款口感清新的饮品，更是一种生活方式的选择。无论是在工作中还是在生活中，一杯康师傅绿茶都能让人感受到清新自然的美好。让我们一起来探寻康师傅绿茶的魅力，享受生活中的每一刻。"
+      "总的来说，康师傅绿茶是一款不可多得的好饮品，无论是口感、营养还是包装设计都让人满意。如果你也喜欢清新怡人的味道，不妨试试康师傅绿茶，让清新之味伴随你的每一天！"
      ]
     }
    ],
