--- a/langchain/07-LLMs具有少量样本的提示词示例.ipynb
+++ b/langchain/07-LLMs具有少量样本的提示词示例.ipynb
@@ -226,7 +226,7 @@
      "text": [
       "这里是否需要跟进：是的\n",
       "        追问：李世民活了多少岁？\n",
-      "        中间答案：李世民活了51岁\n",
+      "        中间答案：李世民活了52岁\n",
       "        追问：雍正活了多少岁？\n",
       "        中间答案：雍正活了58岁\n",
       "        最终答案：雍正活得更久"
@@ -265,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "与输入最相似的示例: vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x33daabe20> k=1 example_keys=None input_keys=None vectorstore_kwargs=None\n"
+      "与输入最相似的示例: vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x7f36194377f0> k=1 example_keys=None input_keys=None vectorstore_kwargs=None\n"
      ]
     }
    ],
@@ -275,7 +275,7 @@
     "from langchain_community.embeddings.huggingface import HuggingFaceEmbeddings\n",
     "\n",
     "# 定义词向量模型\n",
-    "embeddings = HuggingFaceEmbeddings(model_name=\"/Users/libing/kk_LLMs/bge-large-zh-v1.5\")\n",
+    "embeddings = HuggingFaceEmbeddings(model_name=\"/home/libing/kk_LLMs/bge-large-zh-v1.5\")\n",
     "\n",
     "# 创建示例选择器\n",
     "examples_selector = SemanticSimilarityExampleSelector.from_examples(\n",
@@ -299,7 +299,7 @@
     {
      "data": {
       "text/plain": [
-       "SemanticSimilarityExampleSelector(vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x33daabe20>, k=1, example_keys=None, input_keys=None, vectorstore_kwargs=None)"
+       "SemanticSimilarityExampleSelector(vectorstore=<langchain_community.vectorstores.faiss.FAISS object at 0x7f36194377f0>, k=1, example_keys=None, input_keys=None, vectorstore_kwargs=None)"
       ]
      },
      "execution_count": 8,
@@ -369,14 +369,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "与输入最相似的示例: vectorstore=<langchain_community.vectorstores.chroma.Chroma object at 0x349a42f50> k=1 example_keys=None input_keys=None vectorstore_kwargs=None\n"
+      "与输入最相似的示例: vectorstore=<langchain_community.vectorstores.chroma.Chroma object at 0x7f35dc21d4e0> k=1 example_keys=None input_keys=None vectorstore_kwargs=None\n"
      ]
     }
    ],
@@ -386,7 +386,7 @@
     "from langchain_community.embeddings.huggingface import HuggingFaceEmbeddings\n",
     "\n",
     "# 定义词向量模型\n",
-    "embeddings = HuggingFaceEmbeddings(model_name=\"/Users/libing/kk_LLMs/bge-large-zh-v1.5\")\n",
+    "embeddings = HuggingFaceEmbeddings(model_name=\"/home/libing/kk_LLMs/bge-large-zh-v1.5\")\n",
     "\n",
     "# 创建示例选择器\n",
     "examples_selector = SemanticSimilarityExampleSelector.from_examples(\n",
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -417,8 +417,8 @@
       "        追问：斯坦利·阿摩斯·邓汉姆的父亲是谁？\n",
       "        中间答案：斯坦利·阿摩斯·邓汉姆的父亲是罗素·邓汉姆\n",
       "        追问：罗素·邓汉姆的父亲是谁？\n",
-      "        中间答案：罗素·邓汉姆的父亲是弗雷德里克·邓汉姆\n",
-      "        最终答案：奥巴马的外祖父的爷爷是弗雷德里克·邓汉姆"
+      "        中间答案：罗素·邓汉姆的父亲是詹姆斯·邓汉姆\n",
+      "        最终答案：奥巴马的外祖父的爷爷是詹姆斯·邓汉姆"
      ]
     }
    ],
