--- a/langchain/08-对话提示词工程.ipynb
+++ b/langchain/08-对话提示词工程.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,17 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "52\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "final_prompt = ChatPromptTemplate.from_messages([\n",
     "    (\"system\", \"你是一位非常厉害的数学天才，你的名字叫’math明‘\"),\n",
@@ -112,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "我叫math明。很高兴你能问起我的名字！有什么数学问题需要帮助吗？\n"
+      "我是数学明。\n"
      ]
     }
    ],
@@ -129,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -146,16 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "\n",
-      "这里使用了整数除法（//），结果是商的整数部分。所以，18 整除以 4 的结果是 4。\n"
+      "4\n"
      ]
     }
    ],
@@ -165,16 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18\n",
-      "\n",
-      "当你用一个数除以另一个数时，模运算（%）给出的是余数。在这个例子中，18小于34，所以当18被34除时，商是0，余数就是18本身。\n"
+      "18\n"
      ]
     }
    ],
@@ -184,14 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18的平方是324。\n"
+      "324\n"
      ]
     }
    ],
@@ -216,29 +204,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_9692/1748331243.py:4: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embeddings = HuggingFaceEmbeddings(model_name=\"/home/libing/kk_LLMs/bge-large-zh-v1.5\")\n",
+      "/home/libing/miniconda3/envs/kk_langchain_wsl/lib/python3.10/site-packages/sentence_transformers/cross_encoder/CrossEncoder.py:13: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm, trange\n"
+     ]
+    }
+   ],
    "source": [
     "# 加载本地词向量模型\n",
     "from langchain_community.embeddings.huggingface import HuggingFaceEmbeddings\n",
     "\n",
-    "embeddings = HuggingFaceEmbeddings(model_name=\"/Users/libing/kk_LLMs/bge-large-zh-v1.5\")"
+    "embeddings = HuggingFaceEmbeddings(model_name=\"/home/libing/kk_LLMs/bge-large-zh-v1.5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'input': '牛对月亮说了什么?', 'output': '什么都没有'},\n",
-       " {'input': '牛对月亮说了什么?', 'output': '什么都没有'}]"
+       " {'input': '2 + 2 =', 'output': '4'}]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -284,8 +283,8 @@
      "text": [
       "Human: 3 * 3 =\n",
       "AI: 9\n",
-      "Human: 3 * 3 =\n",
-      "AI: 9\n"
+      "Human: 5 - 3 =\n",
+      "AI: 2\n"
      ]
     }
    ],
@@ -304,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -314,8 +313,8 @@
       "System: 你是一位非常厉害的数学天才，你的名字叫’math明‘\n",
       "Human: 3 * 3 =\n",
       "AI: 9\n",
-      "Human: 3 * 3 =\n",
-      "AI: 9\n",
+      "Human: 5 - 3 =\n",
+      "AI: 2\n",
       "Human: What's 3+3?\n"
      ]
     }
@@ -332,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,14 +350,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "“对牛弹琴”这个成语通常用来形容对不懂道理的人讲道理，或对不懂艺术的人讲艺术，比喻白费力气。如果从字面上理解，在数学和逻辑的世界里，“对牛弹琴”并没有实际的对话内容或者数学意义。如果你有其他关于数学的问题，欢迎提问！\n"
+      "哞哞！\n"
      ]
     }
    ],
@@ -368,14 +367,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "我是math明，一位专注于数学的助手。如果您有任何数学相关的问题或需要帮助，欢迎向我提问！\n"
+      "我是math明，一个非常厉害的数学天才。我对数字、方程式和问题解决有着无与伦比的理解力。我能够快速准确地计算出复杂的算术问题，并且总是找到解决问题的最佳方法。\n"
      ]
     }
    ],
@@ -385,14 +384,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "当然可以。请告诉我您希望这首五言诗的主题是什么？例如自然、爱情、友情或其他任何主题。这样我可以更好地为您创作。\n"
+      "月亮在天空中高挂，\n",
+      "照亮了夜晚的黑暗。\n",
+      "它照耀着大地，\n",
+      "它的光芒让万物都感到温暖。\n"
      ]
     }
    ],
@@ -402,19 +404,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "数理蕴玄机，\n",
-      "智慧启明辉。\n",
-      "方程解万物，\n",
-      "几何绘天衣。\n",
-      "算法通神妙，\n",
-      "逻辑显精微。\n"
+      "数字之舞，数学之美，  \n",
+      "揭示了宇宙的秘密。  \n",
+      "方程和公式，  \n",
+      "解开自然之谜。\n"
      ]
     }
    ],
@@ -424,22 +424,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3的平方是9。\n",
+      "9\n",
       "\n",
-      "下面是关于3的平方的一首五言诗：\n",
-      "三数自相乘，  \n",
-      "得九意方成。  \n",
-      "简算心中过，  \n",
-      "智慧自然生。  \n",
-      "\n",
-      "希望您喜欢这首小诗！\n"
+      "三乘以三，得九，\n",
+      "在数字世界中闪耀。\n",
+      "它是一个完美的平方，\n",
+      "一个美丽的数学奇迹。\n"
      ]
     }
    ],
@@ -449,23 +446,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3的平方是9。\n",
+      "9\n",
       "\n",
-      "下面是一首关于3的平方的七言诗：\n",
-      "\n",
-      "三乘三得九成章，  \n",
-      "数字之中藏玄机。  \n",
-      "平凡中见奇妙处，  \n",
-      "数学之美无边际。  \n",
-      "\n",
-      "希望您喜欢这首小诗！\n"
+      "三乘以三得九，\n",
+      "一个完美的数字。\n",
+      "它在数学中很特别，\n",
+      "因为它是一个完全平方数。\n"
      ]
     }
    ],
@@ -475,18 +468,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "当然，请看下面的答案：\n",
-      "\n",
-      "2 + 2 = 4\n",
-      "\n",
-      "这个等式表示两个数相加的结果是四。如果您有更复杂的问题或者需要进一步的解释，请告诉我！\n"
+      "3乘以3等于9。\n"
      ]
     }
    ],
