--- a/langchain/09-提示词里模板中的模板.ipynb
+++ b/langchain/09-提示词里模板中的模板.ipynb
@@ -15,9 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='愿上帝与你同在！' additional_kwargs={} response_metadata={} role='kkutys'\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.prompts import ChatMessagePromptTemplate\n",
     "\n",
@@ -39,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[HumanMessage(content='学习炒股最好的方法是什么？', additional_kwargs={}, response_metadata={}), AIMessage(content='        1. 首先，学习各类金融知识，了解各类财务指标的含义。\\n        2. 其次，学习各类财报的阅读和分析，找到适合自己的一种的财报解读方法论。\\n        3. 最后，学习1-2两种技术指标，可以参考一些经典技术书籍学习，找到适合自己的一种组合指标分析方法。\\n    ', additional_kwargs={}, response_metadata={}), HumanMessage(content='用10个字总结一下迄今为止我们之间的对话。', additional_kwargs={}, response_metadata={})]\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate, HumanMessagePromptTemplate, MessagesPlaceholder\n",
     "from langchain_core.messages import HumanMessage, AIMessage\n",
@@ -72,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "探讨炒股学习方法，建议先学金融知识、财报分析，再掌握技术指标，形成个人投资策略。\n"
+      "探讨学习炒股方法，包括金融知识、财报分析和技术指标，强调系统学习和实践结合。\n"
      ]
     }
    ],
@@ -126,9 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foo: bar baz: qux\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.prompts import PromptTemplate\n",
     "\n",
@@ -141,9 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foo: bar baz: qux\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = PromptTemplate(\n",
     "    template=\"foo: {foo} baz: {baz}\",\n",
@@ -165,9 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "今天是2024-12-22, 请给我讲一个关于爱情的经典论述.\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -184,42 +224,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "当然可以。量子力学是20世纪初发展起来的一门物理学分支，它彻底改变了我们对自然界的认识。其中一个经典的论述是由奥地利物理学家埃尔温·薛定谔提出的“薛定谔的猫”思想实验。\n",
+      "当然可以。今天我将为你讲述一个关于量子力学的经典论述，即海森堡不确定性原理（Heisenberg Uncertainty Principle）。\n",
       "\n",
-      "### 薛定谔的猫\n",
+      "### 海森堡不确定性原理\n",
       "\n",
-      "**背景：**\n",
-      "薛定谔的猫是薛定谔在1935年提出的一个思想实验，旨在探讨量子力学中的叠加态和测量问题。这个实验通过一个极端的例子，揭示了量子力学与经典物理学之间的深刻矛盾。\n",
+      "海森堡不确定性原理是量子力学中的一个核心概念，由德国物理学家维尔纳·海森堡于1927年提出。这一原理揭示了在量子尺度上，某些物理量（如位置和动量）无法同时被精确测量。\n",
       "\n",
-      "**实验描述：**\n",
-      "1. **装置：** 一个封闭的箱子，里面有一只猫、一瓶毒气、一个放射性原子、一个盖革计数器和一个锤子。\n",
-      "2. **机制：**\n",
-      "   - 放射性原子有50%的概率在1小时内衰变。\n",
-      "   - 如果盖革计数器检测到原子衰变，锤子会砸碎毒气瓶，猫会被毒死。\n",
-      "   - 如果原子没有衰变，猫则存活。\n",
+      "#### 基本内容\n",
       "\n",
-      "**核心思想：**\n",
-      "根据量子力学的哥本哈根解释，在没有进行观察之前，放射性原子处于“衰变”和“未衰变”的叠加态。因此，箱子里的猫也处于“生”和“死”的叠加态。\n",
+      "不确定性原理可以用以下数学表达式来描述：\n",
       "\n",
-      "**薛定谔的质疑：**\n",
-      "薛定谔通过这个思想实验提出了一个关键问题：量子力学中的叠加态在宏观世界中是否依然适用？在未打开箱子进行观察之前，猫究竟是生是死？这引发了关于量子力学测量问题的广泛讨论。\n",
+      "\\[ \\Delta x \\Delta p \\geq \\frac{\\hbar}{2} \\]\n",
       "\n",
-      "**意义：**\n",
-      "- **叠加态：** 强调了量子系统在未观测前处于多种可能状态的叠加。\n",
-      "- **测量问题：** 探讨了观察者在量子力学中的角色，即测量行为如何导致波函数坍缩。\n",
-      "- **量子与经典的界限：** 引发了对量子力学如何过渡到经典物理学的思考。\n",
+      "其中：\n",
+      "- \\(\\Delta x\\) 表示位置 \\(x\\) 的不确定性。\n",
+      "- \\(\\Delta p\\) 表示动量 \\(p\\) 的不确定性。\n",
+      "- \\(\\hbar\\) 是约化普朗克常数，约为 \\(1.054 \\times 10^{-34} \\, \\text{J} \\cdot \\text{s}\\)。\n",
       "\n",
-      "**后续影响：**\n",
-      "薛定谔的猫成为量子力学中最著名的思想实验之一，激发了无数科学家对量子力学基础问题的深入研究，包括多世界解释、量子退相干等理论。\n",
+      "这个不等式表明，位置和动量的不确定性乘积的最小值是 \\(\\hbar/2\\)，也就是说，我们不能同时精确地知道一个粒子的位置和动量。\n",
       "\n",
-      "这个思想实验不仅展示了量子力学的奇特性质，也揭示了我们对自然界最基本概念的深刻反思。希望通过这个经典论述，你能对量子力学的复杂性和魅力有更深的理解。"
+      "#### 物理意义\n",
+      "\n",
+      "1. **测量干扰**：在量子尺度上，测量过程本身会对被测量的系统产生影响。例如，为了测量一个电子的位置，我们需要用光子去撞击它，但这一过程会改变电子的动量。\n",
+      "\n",
+      "2. **波粒二象性**：量子粒子既表现出波动性，也表现出粒子性。不确定性原理反映了这种波粒二象性的本质。波函数的 Fourier 变换关系也支持这一观点。\n",
+      "\n",
+      "3. **非经典概率**：在量子力学中，粒子的状态由波函数描述，波函数的平方给出了粒子出现在某位置的概率。不确定性原理表明，这种概率性是内在的，而不是由于测量技术不足。\n",
+      "\n",
+      "#### 经典例子\n",
+      "\n",
+      "假设我们试图测量一个电子的位置和动量。如果我们使用高精度的仪器来测量电子的位置，那么电子的动量就会变得非常不确定；反之，如果我们精确测量电子的动量，那么其位置就会变得非常不确定。\n",
+      "\n",
+      "### 影响和应用\n",
+      "\n",
+      "海森堡不确定性原理不仅在理论物理学中具有重要意义，还在多个领域产生了深远影响：\n",
+      "\n",
+      "1. **量子计算**：不确定性原理是量子比特（qubit）的基础，量子比特可以同时处于0和1的叠加态，这为量子计算提供了强大的并行处理能力。\n",
+      "\n",
+      "2. **量子加密**：基于不确定性原理的量子密钥分发（QKD）技术，可以实现无法被破解的加密通信。\n",
+      "\n",
+      "3. **基础研究**：不确定性原理推动了量子场论、弦理论等前沿物理学的发展。\n",
+      "\n",
+      "### 总结\n",
+      "\n",
+      "海森堡不确定性原理是量子力学的基石之一，它不仅揭示了微观世界的本质特征，还对现代科技和基础科学研究产生了深远影响。通过理解这一原理，我们能够更深刻地认识到量子世界的奇妙与复杂。\n",
+      "\n",
+      "希望这个经典论述能帮助你更好地理解量子力学的精髓！如果你有更多问题，欢迎继续探讨。"
      ]
     }
    ],
