--- a/langchain/10-管道提示词.ipynb
+++ b/langchain/10-管道提示词.ipynb
@@ -77,14 +77,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/f5/wwjgctq529v381m5rw2lrfr00000gn/T/ipykernel_47699/2544058237.py:7: LangChainDeprecationWarning: This class is deprecated. Please see the docstring below or at the link for a replacement option: https://python.langchain.com/api_reference/core/prompts/langchain_core.prompts.pipeline.PipelinePromptTemplate.html\n",
+      "/tmp/ipykernel_12252/2544058237.py:7: LangChainDeprecationWarning: This class is deprecated. Please see the docstring below or at the link for a replacement option: https://python.langchain.com/api_reference/core/prompts/langchain_core.prompts.pipeline.PipelinePromptTemplate.html\n",
       "  final_prompt = PipelinePromptTemplate(\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['person', 'question_a', 'question_q', 'input']"
+       "['person', 'question_a', 'input', 'question_q']"
       ]
      },
      "execution_count": 5,
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "因为我更喜欢真的水果，吃起来甜甜的，还能补充水分和维生素呢！西瓜视频虽然也不错，但我更喜欢自然的西瓜。😄🍉"
+      "因为我更喜欢真的西瓜，吃起来又甜又解渴，而且营养丰富。西瓜视频虽然也不错，但和吃西瓜的感觉还是不一样的嘛！😄"
      ]
     }
    ],
