--- a/langchain/11-缓存机制Caching.ipynb
+++ b/langchain/11-缓存机制Caching.ipynb
@@ -14,18 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LangChain 并不是一个广泛认可或标准化的技术术语，因此它可能指的是某个特定领域的概念、技术框架或者是某种尚未广为人知的专业名词。在没有具体上下文的情况下，很难直接定义“LangChain”。\n",
+      "截至我的知识更新日期（2023年6月），\"LangChain\"并不是一个广为人知的术语或概念。它可能是一个特定领域的技术、产品、项目或其他形式的创新，但这个名称在主流的科技文献、新闻报道或公共讨论中并不常见。\n",
       "\n",
-      "如果假设这是一个关于语言处理或者编程领域内的自创词汇，“Lang”可能代表“Language”，而“Chain”则可以有多种解释，比如链式操作、链条结构等。因此，一种可能的解读是：LangChain 可能是指某种涉及语言处理技术（如自然语言处理NLP）的应用或框架，该应用或框架采用了某种形式的链式结构来组织其功能模块或者数据流。\n",
+      "如果\"LangChain\"是指某个具体的软件库、框架或者工具，那么它可能是与编程语言（如Python）中的链式调用或者其他某种形式的语言处理技术有关。然而，由于缺乏具体的信息和上下文，我无法提供一个确切的定义或者解释。\n",
       "\n",
-      "但是请注意，这仅仅是一种推测性的解释，在没有具体背景信息的情况下，这个答案仅供参考。如果你有更具体的上下文或者是关于LangChain的具体描述，请提供更多信息以便给出准确的答案。\n"
+      "如果你能提供更多的背景信息或者上下文，我会尽力根据你所提供的资料给出一个更准确的答案。\n"
      ]
     }
    ],
@@ -54,18 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LangChain 并不是一个广为人知的技术术语或标准定义的概念，因此可能需要更多的上下文来准确回答。不过，在一些特定领域或者新兴技术讨论中，“LangChain”可能是指某种语言处理链（Language Processing Chain）或者是某个具体项目、框架的名字。例如，在自然语言处理（NLP）领域，它可能会被用来描述一系列用于处理和分析文本数据的技术或工具的集合。\n",
+      "截至我的知识更新日期（2023年6月），\"LangChain\"并不是一个广为人知的术语或概念。它可能是一个特定领域的术语、新兴技术、软件项目、研究课题或其他类型的创新，但在我所掌握的信息中没有关于这个名词的具体定义。\n",
       "\n",
-      "如果“LangChain”是指一个特定项目或者技术栈，请提供更多的背景信息以便给出更准确的回答。如果没有具体的上下文，“LangChain”的含义可能需要根据具体讨论的内容来确定。\n",
-      "CPU times: user 40.2 ms, sys: 6.86 ms, total: 47 ms\n",
-      "Wall time: 6.23 s\n"
+      "如果\"LangChain\"是指某个具体的科技产品、开源项目或者学术论文中的概念，我建议您查看最新的在线资源、官方文档或相关的技术社区论坛以获取最准确和详细的信息。随着技术的发展和新项目的出现，可能会有新的术语和技术被引入到不同的领域中。\n",
+      "CPU times: user 1.08 s, sys: 1.71 s, total: 2.79 s\n",
+      "Wall time: 4.57 s\n"
      ]
     }
    ],
@@ -81,18 +81,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LangChain 并不是一个广为人知的技术术语或标准定义的概念，因此可能需要更多的上下文来准确回答。不过，在一些特定领域或者新兴技术讨论中，“LangChain”可能是指某种语言处理链（Language Processing Chain）或者是某个具体项目、框架的名字。例如，在自然语言处理（NLP）领域，它可能会被用来描述一系列用于处理和分析文本数据的技术或工具的集合。\n",
+      "截至我的知识更新日期（2023年6月），\"LangChain\"并不是一个广为人知的术语或概念。它可能是一个特定领域的术语、新兴技术、软件项目、研究课题或其他类型的创新，但在我所掌握的信息中没有关于这个名词的具体定义。\n",
       "\n",
-      "如果“LangChain”是指一个特定项目或者技术栈，请提供更多的背景信息以便给出更准确的回答。如果没有具体的上下文，“LangChain”的含义可能需要根据具体讨论的内容来确定。\n",
-      "CPU times: user 1.15 ms, sys: 348 μs, total: 1.5 ms\n",
-      "Wall time: 1.35 ms\n"
+      "如果\"LangChain\"是指某个具体的科技产品、开源项目或者学术论文中的概念，我建议您查看最新的在线资源、官方文档或相关的技术社区论坛以获取最准确和详细的信息。随着技术的发展和新项目的出现，可能会有新的术语和技术被引入到不同的领域中。\n",
+      "CPU times: user 343 μs, sys: 372 μs, total: 715 μs\n",
+      "Wall time: 699 μs\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,28 +114,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "标题：夏日炎炎，来一杯康师傅冰红茶解渴又提神🍹✨\n",
+      "# 夏日清凉必备，一口冰红茶的畅快体验！🌞✨\n",
       "\n",
-      "正文：\n",
-      "夏天到了，是不是觉得热得让人只想躲进空调房里？但是你知道吗？有一款饮料能让你在享受清凉的同时还能感受到满满的活力哦！那就是——康师傅冰红茶！🍵❄️\n",
+      "大家好呀！今天我要给大家安利一个夏日的宝藏饮品——康师傅冰红茶！在这个炎热的夏天，没有什么比一杯冰镇的康师傅冰红茶更能带来清爽的感觉了。🍹💦\n",
       "\n",
-      "每一口都是经典的茶香与冰爽的完美结合，它不仅能够迅速降温解渴，还能给你带来一天的好心情。无论是独自享用还是和朋友分享，都能成为夏日里的一抹亮色。👭🎉\n",
+      "首先，它的包装设计就非常吸引人，简洁的红色瓶身配上金色的字体，让人一眼就能认出这是康师傅家的经典饮品。而且，它的大小也很适合随身携带，无论是去海边、户外运动还是逛街，都能随时享受那一份清凉。🏖️🚶‍♀️\n",
       "\n",
-      "而且，它的包装设计也是相当有心机呢！简洁大方又不失时尚感，无论放在哪里都是那么地吸引眼球。不管是户外野餐还是办公室小憩，康师傅冰红茶都是你的不二之选！🏞️💼\n",
+      "说到口感，康师傅冰红茶真的是一绝！它的味道清新而不甜腻，微微的苦涩中带着一丝丝甘甜，喝起来非常解渴。而且，它还含有丰富的维生素C，不仅能够帮助提神醒脑，还能增强免疫力哦。🍀💪\n",
       "\n",
-      "快来试试看吧，让康师傅冰红茶陪你度过每一个炎炎夏日，享受清凉与活力的双重体验！🌈🌟\n",
+      "除此之外，康师傅冰红茶还有一个隐藏的魅力——它的价格亲民！对于学生党和上班族来说，这样的性价比简直不要太友好。无论是自己喝还是和朋友分享，都是不错的选择。👭👫\n",
       "\n",
-      "标签：\n",
-      "#康师傅冰红茶 #夏日解渴神器 #提神又爽口\n",
-      "CPU times: user 6.25 ms, sys: 1.85 ms, total: 8.11 ms\n",
-      "Wall time: 10.2 s\n"
+      "总之，如果你还在为夏日的热浪烦恼，不妨试试这款康师傅冰红茶。它不仅能够给你带来清凉的口感体验，还能让你的心情也跟着凉爽起来！快来加入我们，一起享受这个夏天吧！🌊🍃\n",
+      "\n",
+      "#夏日饮品 #康师傅冰红茶 #清爽一夏 #小红书种草机\n",
+      "CPU times: user 0 ns, sys: 4.61 ms, total: 4.61 ms\n",
+      "Wall time: 11 s\n"
      ]
     }
    ],
@@ -146,28 +146,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "标题：夏日炎炎，来一杯康师傅冰红茶解渴又提神🍹✨\n",
+      "# 夏日清凉必备，一口冰红茶的畅快体验！🌞✨\n",
       "\n",
-      "正文：\n",
-      "夏天到了，是不是觉得热得让人只想躲进空调房里？但是你知道吗？有一款饮料能让你在享受清凉的同时还能感受到满满的活力哦！那就是——康师傅冰红茶！🍵❄️\n",
+      "大家好呀！今天我要给大家安利一个夏日的宝藏饮品——康师傅冰红茶！在这个炎热的夏天，没有什么比一杯冰镇的康师傅冰红茶更能带来清爽的感觉了。🍹💦\n",
       "\n",
-      "每一口都是经典的茶香与冰爽的完美结合，它不仅能够迅速降温解渴，还能给你带来一天的好心情。无论是独自享用还是和朋友分享，都能成为夏日里的一抹亮色。👭🎉\n",
+      "首先，它的包装设计就非常吸引人，简洁的红色瓶身配上金色的字体，让人一眼就能认出这是康师傅家的经典饮品。而且，它的大小也很适合随身携带，无论是去海边、户外运动还是逛街，都能随时享受那一份清凉。🏖️🚶‍♀️\n",
       "\n",
-      "而且，它的包装设计也是相当有心机呢！简洁大方又不失时尚感，无论放在哪里都是那么地吸引眼球。不管是户外野餐还是办公室小憩，康师傅冰红茶都是你的不二之选！🏞️💼\n",
+      "说到口感，康师傅冰红茶真的是一绝！它的味道清新而不甜腻，微微的苦涩中带着一丝丝甘甜，喝起来非常解渴。而且，它还含有丰富的维生素C，不仅能够帮助提神醒脑，还能增强免疫力哦。🍀💪\n",
       "\n",
-      "快来试试看吧，让康师傅冰红茶陪你度过每一个炎炎夏日，享受清凉与活力的双重体验！🌈🌟\n",
+      "除此之外，康师傅冰红茶还有一个隐藏的魅力——它的价格亲民！对于学生党和上班族来说，这样的性价比简直不要太友好。无论是自己喝还是和朋友分享，都是不错的选择。👭👫\n",
       "\n",
-      "标签：\n",
-      "#康师傅冰红茶 #夏日解渴神器 #提神又爽口\n",
-      "CPU times: user 1.23 ms, sys: 468 μs, total: 1.7 ms\n",
-      "Wall time: 1.36 ms\n"
+      "总之，如果你还在为夏日的热浪烦恼，不妨试试这款康师傅冰红茶。它不仅能够给你带来清凉的口感体验，还能让你的心情也跟着凉爽起来！快来加入我们，一起享受这个夏天吧！🌊🍃\n",
+      "\n",
+      "#夏日饮品 #康师傅冰红茶 #清爽一夏 #小红书种草机\n",
+      "CPU times: user 661 μs, sys: 0 ns, total: 661 μs\n",
+      "Wall time: 593 μs\n"
      ]
     }
    ],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -216,8 +216,8 @@
       "快来尝一尝这份来自童年的甜蜜吧，保证让你回味无穷！🌈\n",
       "\n",
       "#旺仔小馒头 #童年回忆 #零食控必备\n",
-      "CPU times: user 10.8 ms, sys: 1.95 ms, total: 12.7 ms\n",
-      "Wall time: 7.74 s\n"
+      "CPU times: user 45 ms, sys: 0 ns, total: 45 ms\n",
+      "Wall time: 41.1 ms\n"
      ]
     }
    ],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -248,8 +248,8 @@
       "快来尝一尝这份来自童年的甜蜜吧，保证让你回味无穷！🌈\n",
       "\n",
       "#旺仔小馒头 #童年回忆 #零食控必备\n",
-      "CPU times: user 5.61 ms, sys: 2.35 ms, total: 7.96 ms\n",
-      "Wall time: 6.75 ms\n"
+      "CPU times: user 1.83 ms, sys: 0 ns, total: 1.83 ms\n",
+      "Wall time: 1.56 ms\n"
      ]
     }
    ],
