--- a/langchain/14-xml输出解析器.ipynb
+++ b/langchain/14-xml输出解析器.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,14 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'xml': [{'name': '刘亦菲'}, {'age': '36'}, {'gender': '女'}, {'film_list': [{'movie': '天龙八部'}, {'movie': '仙剑奇侠传'}, {'movie': '卧虎藏龙2：青冥宝剑'}, {'movie': '四大名捕'}, {'movie': '神雕侠侣'}]}]}\n"
+      "{'xml': [{'name': '刘亦菲'}, {'age': '34'}, {'gender': '女'}, {'film_list': [{'movie': '金粉世家'}, {'movie': '天龙八部'}, {'movie': '神雕侠侣'}, {'movie': '仙剑奇侠传'}, {'movie': '功夫之王'}]}]}\n"
      ]
     }
    ],
