--- a/langchain/16-数据检索.ipynb
+++ b/langchain/16-数据检索.ipynb
@@ -14,29 +14,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_13789/2988834985.py:5: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embeddings = HuggingFaceEmbeddings(model_name=\"/home/libing/kk_LLMs/bge-large-zh-v1.5\")\n",
+      "/home/libing/miniconda3/envs/kk_langchain_wsl/lib/python3.10/site-packages/sentence_transformers/cross_encoder/CrossEncoder.py:13: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm, trange\n"
+     ]
+    }
+   ],
    "source": [
     "# 导入本地词嵌入模型\n",
     "from langchain_community.embeddings.huggingface import HuggingFaceEmbeddings\n",
     "from langchain_community.vectorstores import FAISS\n",
     "\n",
-    "embeddings = HuggingFaceEmbeddings(model_name=\"/Users/libing/kk_LLMs/bge-large-zh-v1.5\")"
+    "embeddings = HuggingFaceEmbeddings(model_name=\"/home/libing/kk_LLMs/bge-large-zh-v1.5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langchain_community.vectorstores.faiss.FAISS at 0x321db6680>"
+       "<langchain_community.vectorstores.faiss.FAISS at 0x7fc38fa13af0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,19 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(metadata={}, page_content='今天天气很好，适合出去游玩。'),\n",
-       " Document(metadata={}, page_content='今天天气不好，不适合出去游玩。'),\n",
-       " Document(metadata={}, page_content='狗喜欢吃屎，尤其是热乎乎的新鲜的狗屎。'),\n",
-       " Document(metadata={}, page_content='熊喜欢吃蜂蜜，尤其是新鲜的蜂蜜。')]"
+       "[Document(id='c26cba9c-2ceb-46f6-a9e1-64c3911e5dbb', metadata={}, page_content='今天天气很好，适合出去游玩。'),\n",
+       " Document(id='d6ca30ea-e422-4c23-8ce0-06fd1a43688c', metadata={}, page_content='今天天气不好，不适合出去游玩。'),\n",
+       " Document(id='ef13f868-d350-4533-bdc2-03b97ea90928', metadata={}, page_content='狗喜欢吃屎，尤其是热乎乎的新鲜的狗屎。'),\n",
+       " Document(id='1768594a-596f-4df6-928f-ab955f126e1e', metadata={}, page_content='熊喜欢吃蜂蜜，尤其是新鲜的蜂蜜。')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,16 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'根据提供的文档内容，有两份关于天气情况的信息，其中一份表示“今天天气很好，适合出去游玩”，而另一份则说“今天天气不好，不适合出去游玩”。因此，需要依据实际的天气状况来判断。如果今天的天气确实很好，则适合出去游玩；反之，则不太适合。由于文档中存在矛盾的信息，建议您查看最新的天气预报以做出决定。'"
+       "\"根据提供的文档内容，有两个文档提到了天气情况：\\n\\n1. Document(id='c26cba9c-2ceb-46f6-a9e1-64c3911e5dbb', metadata={}, page_content='今天天气很好，适合出去游玩。')\\n2. Document(id='d6ca30ea-e422-4c23-8ce0-06fd1a43688c', metadata={}, page_content='今天天气不好，不适合出去游玩。')\\n\\n第一个文档指出“今天天气很好，适合出去游玩”，而第二个文档则说“今天天气不好，不适合出去游玩”。由于这两个文档给出了相互矛盾的信息，我们无法确定今天的天气究竟如何。因此，无法根据这些信息明确回答是否适合出去游玩。\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,16 +169,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'根据提供的文档内容，“熊喜欢吃蜂蜜，尤其是新鲜的蜂蜜。”因此，熊喜欢吃蜂蜜。\\n\\n关于“狗”的饮食偏好，在这里仅作为对比信息提供，并不是关于狗熊（假设您指的是熊）的问题答案。所以，针对您的问题，熊喜欢吃的是蜂蜜。'"
+       "'根据提供的文档内容，我们可以看到有两段描述了动物的饮食偏好：\\n\\n1. \"熊喜欢吃蜂蜜，尤其是新鲜的蜂蜜。\"\\n2. \"狗喜欢吃屎，尤其是热乎乎的新鲜的狗屎。\"\\n\\n因此，根据这些信息，我们可以得出结论：\\n- 熊喜欢吃蜂蜜。\\n- 狗喜欢吃屎（这里可能是指狗吃自己的粪便，这是一种在某些情况下可能发生的行为）。\\n\\n由于问题中提到的“狗熊”这个词通常指的是熊类动物，而不是真正的狗和熊的组合体，所以我们可以推断出狗熊喜欢吃的食物是蜂蜜。'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'主人，小明在华为工作。'"
+       "'小明在华为工作，是一个非常优秀的青年。所以，我可以告诉您，小明在华为工作，主人。'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
