--- a/langchain/04-本地部署开源大模型.ipynb
+++ b/langchain/04-本地部署开源大模型.ipynb
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='兔子有四条腿。两条前腿和两条后腿。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 14, 'prompt_tokens': 36, 'total_tokens': 50, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'qwen2.5-32b-instruct', 'system_fingerprint': 'qwen2.5-32b-instruct', 'finish_reason': 'stop', 'logprobs': None}, id='run-5011c6d4-1bee-4c97-9cad-a8d6dbdba45e-0', usage_metadata={'input_tokens': 36, 'output_tokens': 14, 'total_tokens': 50, 'input_token_details': {}, 'output_token_details': {}})"
+       "AIMessage(content='兔子有四条腿。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 6, 'prompt_tokens': 26, 'total_tokens': 32, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'qwen2.5-32b-agi', 'system_fingerprint': 'qwen2.5-32b-agi', 'finish_reason': 'stop', 'logprobs': None}, id='run-bacf4364-3f55-480d-9066-7b058105056b-0', usage_metadata={'input_tokens': 26, 'output_tokens': 6, 'total_tokens': 32, 'input_token_details': {}, 'output_token_details': {}})"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'I want to tell you a joke.'"
+       "'I have a joke for you.'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,14 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "炎炎夏日，一杯清凉解渴的康师傅冰红茶🍹是你的最佳伴侣！无论是忙碌的工作间隙，还是悠闲的家庭时光，它都能为你带来一份清爽与惬意。独特的茶香搭配恰到好处的甜味，每一口都是对味蕾的极致诱惑。现在就来一瓶，让康师傅冰红茶带你逃离夏日的炙热，享受清凉一夏吧！🌞🌈"
+      "想要在炎炎夏日里来一杯清凉可口的饮料吗？康师傅冰红茶是你的不二之选！这款经典的饮品拥有独特的口感和清新的味道，让你在炎热的天气中感到清新舒适。它有多种口味可供选择，包括原味、柠檬和绿茶等，每一种都带有独特的香气和风味。无论你是想要一杯简单的饮料来解渴，还是想要一款美味可口的饮料来搭配你的午餐或晚餐，康师傅冰红茶都是完美的选择！"
      ]
     }
    ],
