--- a/langchain/13-json输出解析器.ipynb
+++ b/langchain/13-json输出解析器.ipynb
@@ -15,9 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/libing/miniconda3/envs/kk_langchain_wsl/lib/python3.10/site-packages/IPython/core/interactiveshell.py:3577: LangChainDeprecationWarning: As of langchain-core 0.3.0, LangChain uses pydantic v2 internally. The langchain_core.pydantic_v1 module was a compatibility shim for pydantic v1, and should no longer be used. Please update the code to import from Pydantic directly.\n",
+      "\n",
+      "For example, replace imports like: `from langchain_core.pydantic_v1 import BaseModel`\n",
+      "with: `from pydantic import BaseModel`\n",
+      "or the v1 compatibility namespace if you are working in a code base that has not been fully upgraded to pydantic 2 yet. \tfrom pydantic.v1 import BaseModel\n",
+      "\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.prompts import PromptTemplate\n",
@@ -37,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,20 +92,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'title': '中国通史简明教程',\n",
-       " 'author': '张三',\n",
-       " 'year': '2023',\n",
-       " 'price': '59.99元',\n",
-       " 'description': '本书是一本适合初学者阅读的中国历史入门书籍，从远古时期到现代，全面介绍了中国的政治、经济和社会变迁。'}"
+       "{'title': '中国历史入门指南',\n",
+       " 'author': '李明',\n",
+       " 'year': '2023年',\n",
+       " 'price': '￥98.00',\n",
+       " 'description': '本书旨在为初学者提供一套全面的中国历史学习框架。从远古的传说时代到现代中国的发展，本书涵盖了各个时期的重要事件、人物和文化成就。通过丰富的图表和插图，以及易于理解的叙述方式，读者可以轻松地了解中国的悠久历史。此外，书中还提供了进一步阅读的建议和在线资源链接，帮助读者深入探索感兴趣的历史话题。'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,12 +124,12 @@
       "text/plain": [
        "{'title': '红楼梦',\n",
        " 'author': '曹雪芹',\n",
-       " 'year': '1791',\n",
-       " 'price': '35.00元',\n",
-       " 'description': '《红楼梦》，中国古代四大名著之一，章回体长篇小说，成书于1791年。小说以贾、史、王、薛四大家族的兴衰为背景，描绘了一批举止见识出于须眉之上的闺阁佳人的人生百态，展现了真正的人性美和悲剧美，可以说是一部从各个角度展现女性美的史诗。'}"
+       " 'year': '1784年（乾隆年间）',\n",
+       " 'price': '价格信息不详',\n",
+       " 'description': '《红楼梦》是中国古典文学四大名著之一，是一部以贾、王、史、薛四大家族的兴衰为背景的长篇小说。它通过描写贾宝玉和林黛玉的爱情悲剧，反映了封建社会的腐朽与没落，以及贵族家庭的衰败过程。该书在艺术上达到了很高的成就，被誉为中国古代小说的巅峰之作。'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
